--- a/stepper/Makefile
+++ b/stepper/Makefile
@@ -32,7 +32,7 @@ C_INCLUDES = \
 -Iinc \
 -Idrivers/inc
 
-CFLAGS = $(MCU) $(C_DEFS) $(C_INCLUDES) -Og -Wall -fdata-sections -ffunction-sections
+CFLAGS = $(MCU) $(C_DEFS) $(C_INCLUDES) -Og -g -Wall -fdata-sections -ffunction-sections
 
 
 #######################################
